[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/opensusinteraction/resources/interactui/interactui.gd" type="Script" id=1]
[ext_resource path="res://assets/player/infiltrator.gd" type="Script" id=2]

[sub_resource type="Resource" id=3]
resource_local_to_scene = true
script = ExtResource( 1 )
ui_name = "killui"
ui_data = {

}
advanced/reinstance = false
advanced/only_instance = true

[sub_resource type="CircleShape2D" id=1]
radius = 60.0

[sub_resource type="Animation" id=2]
resource_name = "Reload"
length = 10.0

[node name="Infiltrator" type="Node2D" groups=[
"infiltrators",
]]
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "Node that gets instantiated as a child of a player when they are assigned the role of \"traitor\"."
}
ui_interact_resource = SubResource( 3 )

[node name="KillCooldownTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
__meta__ = {
"_editor_description_": "Cooldown between kills (unused for now)."
}

[node name="KillArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
__meta__ = {
"_editor_description_": "The area in which another player may be killed by the infiltrator."
}

[node name="KillCollision" type="CollisionShape2D" parent="KillArea"]
shape = SubResource( 1 )
__meta__ = {
"_editor_description_": "The collision of the area where a player may be killed."
}

[node name="Animator" type="AnimationPlayer" parent="."]
anims/Reload = SubResource( 2 )
__meta__ = {
"_editor_description_": "AnimationPlayer responsible for controller Infiltrator specific animations."
}
[connection signal="timeout" from="KillCooldownTimer" to="." method="_on_KillCooldownTimer_timeout"]
[connection signal="body_exited" from="KillArea" to="." method="_on_KillArea_body_exited"]
[connection signal="animation_finished" from="Animator" to="." method="_on_Animator_animation_finished"]
